[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "databaseMLUtils"
version = "0.1.0"
description = "Dataset IO, conversions, preprocessing, and reporting utilities for ML datasets"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
keywords = ["computer-vision", "datasets", "preprocessing", "annotations", "reporting"]
dependencies = ["scikit-image","numpy","matplotlib","opencv-python","pillow","pandas","streamlit","xmltodict"]

[project.scripts]
dbutils = "databaseMLUtils.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/databaseMLUtils"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "W"]
lint.ignore = ["E203", "E266", "E501", "W503"]

